# enigma2cuberevo

./: .project  RecordTimer.py  SleepTimer.py  configure.ac  enigma2.bb  keyids.py  mytest.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CuberevoVFD/: plugin.py
lib/python/Plugins/Extensions/CutListEditor/: Makefile.am  keymap_cuberevo.xml
lib/python/Plugins/Extensions/DVDBurn/: DVDProject.py  DreamboxDVD.ddvdp.xml  Process.py  TitleList.py
lib/python/Plugins/Extensions/DVDBurn/meta/: plugin_dvdburn.xml
lib/python/Plugins/Extensions/DVDPlayer/: plugin.py
lib/python/Plugins/Extensions/DVDPlayer/meta/: plugin_dvdplayer.xml
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py
lib/python/Plugins/Extensions/TuxboxPlugins/: plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/CleanupWizard/: CleanupWizard.py  cleanupwizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/CrashlogAutoSubmit/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/OldSoftwareUpdate/: plugin.py
lib/python/Plugins/SystemPlugins/SkinSelector/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: SoftwareTools.py  plugin.py
lib/python/Plugins/SystemPlugins/Tuxtxt/: Makefile.am
lib/python/Plugins/SystemPlugins/VFD-Icons/: plugin.py
lib/python/Plugins/SystemPlugins/VFDIcons/: Makefile.am
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  plugin.py
lib/python/Plugins/SystemPlugins/WirelessLan/: plugin.py
(+154 files in other folders)
