installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager FrontprocessorUpgrade PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner NFIFlash DiseqcTester CommonInterfaceAssignment \
	CrashlogAutoSubmit CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	TempFanControl VFD-Icons Tuxtxt

install_PYTHON =	\
	__init__.py
